fixed author bio bug with spacing

--- a/app/assets/stylesheets/post_show/7_about_author.scss
+++ b/app/assets/stylesheets/post_show/7_about_author.scss
@@ -2,15 +2,18 @@
 .about-author-alt {
 
   @media only screen and (min-width: 940px) {
+
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 20% auto;
+    
   }
+
   .author-left-col {
-padding: 1rem;
+    padding: 1rem;
+
     img {
       width: 100px;
       height: 100px;
-      // width: 80%;
       height: auto;
       margin: auto;
       border-radius: 100%;
@@ -18,6 +21,7 @@ padding: 1rem;
       text-align: center;
       display: block;
     }
+
   }
 
   .author-right-col {
